Navigation Model Z-index bug fixed. Changes to be committed: 	modified:   src/Components/UI/Global.css 	modified:   src/Components/postcss/Global.css

--- a/src/Components/postcss/Global.css
+++ b/src/Components/postcss/Global.css
@@ -106,3 +106,6 @@ section {
     color: var(--lighter-black);
   }
 }
+.navigation {
+  z-index: 10;
+}
